Update naming to reflect fact that we're not just scraping PDF's anymore

--- a/resources/page.html
+++ b/resources/page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>PDF Documents on OilSpillCommission.gov</title>
+    <title>Files on OilSpillCommission.gov</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script language="JavaScript">
 	    <!--
@@ -34,7 +34,7 @@
   <body>
     <div id="container">
       <div id="container-inner">
-	<h1 id="page-title">PDF Documents on OilSpillCommission.gov</h1>
+	<h1 id="page-title">Files on OilSpillCommission.gov</h1>
 	
 	<div id="main-content">
 	  Main content goes here.
