Add tests and update html template with more appropriate titles

--- a/resources/page.html
+++ b/resources/page.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script language="JavaScript">
 	    <!--
-		js goes here
+		js here
 	      -->
     </script>
     <style type="text/css">
@@ -35,7 +35,7 @@
     <div id="container">
       <div id="container-inner">
 	<h1 id="page-title">Files on OilSpillCommission.gov</h1>
-	
+
 	<div id="main-content">
 	  Main content goes here.
 	</div>
